src/main/java/xyz/qwewqa/sono/grammar/generated/SonoParser.java
// Generated from SonoParser.g4 by ANTLR 4.8

    package xyz.qwewqa.sono.grammar.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SonoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DelimitedComment=1, LineComment=2, WS=3, NL=4, DOT=5, COMMA=6, LPAREN=7, 
		RPAREN=8, LSQUARE=9, RSQUARE=10, LCURL=11, RCURL=12, POW=13, MULT=14, 
		MOD=15, DIV=16, ADD=17, SUB=18, INCR=19, DECR=20, CONJ=21, DISJ=22, EXCL=23, 
		COLON=24, COLONCOLON=25, SEMICOLON=26, ASSIGNMENT=27, ADD_ASSIGNMENT=28, 
		SUB_ASSIGNMENT=29, MULT_ASSIGNMENT=30, DIV_ASSIGNMENT=31, MOD_ASSIGNMENT=32, 
		POW_ASSIGNMENT=33, HASH=34, AT=35, LANGLE=36, RANGLE=37, LE=38, GE=39, 
		EXCL_EQ=40, EQEQ=41, SINGLE_QUOTE=42, ARROW=43, DOUBLE_ARROW=44, IMPORT=45, 
		STRUCT=46, FUNC=47, LET=48, SCRIPT=49, CALLBACK=50, ARCHETYPE=51, VAR=52, 
		VAL=53, IF=54, ELSE=55, WHILE=56, GETTER=57, SETTER=58, AS=59, PACKAGE=60, 
		PUBLIC=61, PRIVATE=62, INTERNAL=63, PROTECTED=64, SHARED=65, STATIC=66, 
		OPERATOR=67, INLINE=68, INIT=69, INFIX=70, DATA=71, LEVEL=72, TEMP=73, 
		RAW=74, CONST=75, NOTE=76, FloatLiteral=77, IntegerLiteral=78, BooleanLiteral=79, 
		Identifier=80, UNICODE_CLASS_LL=81, UNICODE_CLASS_LM=82, UNICODE_CLASS_LO=83, 
		UNICODE_CLASS_LT=84, UNICODE_CLASS_LU=85, UNICODE_CLASS_ND=86, UNICODE_CLASS_NL=87, 
		Inside_Comment=88, Inside_WS=89, Inside_NL=90;
	public static final int
		RULE_sonoFile = 0, RULE_packageHeader = 1, RULE_importList = 2, RULE_importHeader = 3, 
		RULE_topLevelObject = 4, RULE_functionDeclaration = 5, RULE_functionReceiver = 6, 
		RULE_functionValueParameters = 7, RULE_functionValueParameter = 8, RULE_functionBody = 9, 
		RULE_propertyDeclaration = 10, RULE_structDeclaration = 11, RULE_structFields = 12, 
		RULE_structField = 13, RULE_scriptDeclaration = 14, RULE_scriptBody = 15, 
		RULE_scriptMemberDeclaration = 16, RULE_archetypeDeclaration = 17, RULE_archetypeName = 18, 
		RULE_archetypeDefaults = 19, RULE_archetypeDefault = 20, RULE_callbackDeclaration = 21, 
		RULE_callbackOrder = 22, RULE_letDeclaration = 23, RULE_initBlock = 24, 
		RULE_parameter = 25, RULE_type = 26, RULE_parenthesizedType = 27, RULE_simpleUserType = 28, 
		RULE_block = 29, RULE_statement = 30, RULE_declaration = 31, RULE_expression = 32, 
		RULE_disjunction = 33, RULE_conjunction = 34, RULE_equalityComparison = 35, 
		RULE_comparison = 36, RULE_infixFunctionCall = 37, RULE_additiveExpression = 38, 
		RULE_multiplicativeExpression = 39, RULE_exponentiationExpression = 40, 
		RULE_prefixUnaryExpression = 41, RULE_postfixUnaryExpression = 42, RULE_atomicExpression = 43, 
		RULE_parenthesizedExpression = 44, RULE_callSuffix = 45, RULE_valueArguments = 46, 
		RULE_valueArgument = 47, RULE_conditionalExpression = 48, RULE_ifExpression = 49, 
		RULE_loopExpression = 50, RULE_whileExpression = 51, RULE_controlStructureBody = 52, 
		RULE_modifierList = 53, RULE_modifier = 54, RULE_identifier = 55, RULE_simpleIdentifier = 56, 
		RULE_literalConstant = 57, RULE_additiveOperator = 58, RULE_multiplicativeOperation = 59, 
		RULE_prefixUnaryOperation = 60, RULE_postfixUnaryOperation = 61, RULE_memberAccessOperator = 62, 
		RULE_assignmentOperator = 63, RULE_equalityOperation = 64, RULE_comparisonOperator = 65, 
		RULE_semi = 66, RULE_anysemi = 67;
	private static String[] makeRuleNames() {
		return new String[] {
			"sonoFile", "packageHeader", "importList", "importHeader", "topLevelObject", 
			"functionDeclaration", "functionReceiver", "functionValueParameters", 
			"functionValueParameter", "functionBody", "propertyDeclaration", "structDeclaration", 
			"structFields", "structField", "scriptDeclaration", "scriptBody", "scriptMemberDeclaration", 
			"archetypeDeclaration", "archetypeName", "archetypeDefaults", "archetypeDefault", 
			"callbackDeclaration", "callbackOrder", "letDeclaration", "initBlock", 
			"parameter", "type", "parenthesizedType", "simpleUserType", "block", 
			"statement", "declaration", "expression", "disjunction", "conjunction", 
			"equalityComparison", "comparison", "infixFunctionCall", "additiveExpression", 
			"multiplicativeExpression", "exponentiationExpression", "prefixUnaryExpression", 
			"postfixUnaryExpression", "atomicExpression", "parenthesizedExpression", 
			"callSuffix", "valueArguments", "valueArgument", "conditionalExpression", 
			"ifExpression", "loopExpression", "whileExpression", "controlStructureBody", 
			"modifierList", "modifier", "identifier", "simpleIdentifier", "literalConstant", 
			"additiveOperator", "multiplicativeOperation", "prefixUnaryOperation", 
			"postfixUnaryOperation", "memberAccessOperator", "assignmentOperator", 
			"equalityOperation", "comparisonOperator", "semi", "anysemi"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'.'", "','", "'('", null, "'['", null, 
			"'{'", "'}'", "'**'", "'*'", "'%'", "'/'", "'+'", "'-'", "'++'", "'--'", 
			"'&&'", "'||'", "'!'", "':'", "'::'", "';'", "'='", "'+='", "'-='", "'*='", 
			"'/='", "'%='", "'**='", "'#'", "'@'", "'<'", "'>'", "'<='", "'>='", 
			"'!='", "'=='", "'''", "'->'", "'=>'", "'import'", "'struct'", "'func'", 
			"'let'", "'script'", "'callback'", "'archetype'", "'var'", "'val'", "'if'", 
			"'else'", "'while'", "'get'", "'set'", "'as'", "'package'", "'public'", 
			"'private'", "'internal'", "'protected'", "'shared'", "'static'", "'operator'", 
			"'inline'", "'init'", "'infix'", "'data'", "'level'", "'temp'", "'raw'", 
			"'const'", "'note'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DelimitedComment", "LineComment", "WS", "NL", "DOT", "COMMA", 
			"LPAREN", "RPAREN", "LSQUARE", "RSQUARE", "LCURL", "RCURL", "POW", "MULT", 
			"MOD", "DIV", "ADD", "SUB", "INCR", "DECR", "CONJ", "DISJ", "EXCL", "COLON", 
			"COLONCOLON", "SEMICOLON", "ASSIGNMENT", "ADD_ASSIGNMENT", "SUB_ASSIGNMENT", 
			"MULT_ASSIGNMENT", "DIV_ASSIGNMENT", "MOD_ASSIGNMENT", "POW_ASSIGNMENT", 
			"HASH", "AT", "LANGLE", "RANGLE", "LE", "GE", "EXCL_EQ", "EQEQ", "SINGLE_QUOTE", 
			"ARROW", "DOUBLE_ARROW", "IMPORT", "STRUCT", "FUNC", "LET", "SCRIPT", 
			"CALLBACK", "ARCHETYPE", "VAR", "VAL", "IF", "ELSE", "WHILE", "GETTER", 
			"SETTER", "AS", "PACKAGE", "PUBLIC", "PRIVATE", "INTERNAL", "PROTECTED", 
			"SHARED", "STATIC", "OPERATOR", "INLINE", "INIT", "INFIX", "DATA", "LEVEL", 
			"TEMP", "RAW", "CONST", "NOTE", "FloatLiteral", "IntegerLiteral", "BooleanLiteral", 
			"Identifier", "UNICODE_CLASS_LL", "UNICODE_CLASS_LM", "UNICODE_CLASS_LO", 
			"UNICODE_CLASS_LT", "UNICODE_CLASS_LU", "UNICODE_CLASS_ND", "UNICODE_CLASS_NL", 
			"Inside_Comment", "Inside_WS", "Inside_NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SonoParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SonoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SonoFileContext extends ParserRuleContext {
		public ImportListContext importList() {
			return getRuleContext(ImportListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SonoParser.EOF, 0); }
		public List<TerminalNode> NL() { return getTokens(SonoParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(SonoParser.NL, i);
		}
		public PackageHeaderContext packageHeader() {
			return getRuleContext(PackageHeaderContext.class,0);
		}
		public List<AnysemiContext> anysemi() {
			return getRuleContexts(AnysemiContext.class);
		}
		public AnysemiContext anysemi(int i) {
			return getRuleContext(AnysemiContext.class,i);
		}
		public List<TopLevelObjectContext> topLevelObject() {
			return getRuleContexts(TopLevelObjectContext.class);
		}
		public TopLevelObjectContext topLevelObject(int i) {
			return getRuleContext(TopLevelObjectContext.class,i);
		}
		public List<SemiContext> semi() {
			return getRuleContexts(SemiContext.class);
		}
		public SemiContext semi(int i) {
			return getRuleContext(SemiContext.class,i);
		}
		public SonoFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sonoFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).enterSonoFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).exitSonoFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SonoParserVisitor ) return ((SonoParserVisitor<? extends T>)visitor).visitSonoFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SonoFileContext sonoFile() throws RecognitionException {
		SonoFileContext _localctx = new SonoFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sonoFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(136);
					match(NL);
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(142);
				packageHeader();
				}
			}

			setState(148);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(145);
					match(NL);
					}
					} 
				}
				setState(150);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(151);
			importList();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL || _la==SEMICOLON) {
				{
				{
				setState(152);
				anysemi();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 46)) & ~0x3f) == 0 && ((1L << (_la - 46)) & ((1L << (STRUCT - 46)) | (1L << (FUNC - 46)) | (1L << (LET - 46)) | (1L << (SCRIPT - 46)) | (1L << (ARCHETYPE - 46)) | (1L << (VAR - 46)) | (1L << (PUBLIC - 46)) | (1L << (PRIVATE - 46)) | (1L << (SHARED - 46)) | (1L << (STATIC - 46)) | (1L << (OPERATOR - 46)) | (1L << (INIT - 46)) | (1L << (INFIX - 46)) | (1L << (DATA - 46)) | (1L << (LEVEL - 46)) | (1L << (TEMP - 46)) | (1L << (RAW - 46)) | (1L << (CONST - 46)) | (1L << (NOTE - 46)))) != 0)) {
				{
				setState(158);
				topLevelObject();
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL || _la==SEMICOLON) {
					{
					{
					setState(160); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(159);
							semi();
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(162); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (((((_la - 46)) & ~0x3f) == 0 && ((1L << (_la - 46)) & ((1L << (STRUCT - 46)) | (1L << (FUNC - 46)) | (1L << (LET - 46)) | (1L << (SCRIPT - 46)) | (1L << (ARCHETYPE - 46)) | (1L << (VAR - 46)) | (1L << (PUBLIC - 46)) | (1L << (PRIVATE - 46)) | (1L << (SHARED - 46)) | (1L << (STATIC - 46)) | (1L << (OPERATOR - 46)) | (1L << (INIT - 46)) | (1L << (INFIX - 46)) | (1L << (DATA - 46)) | (1L << (LEVEL - 46)) | (1L << (TEMP - 46)) | (1L << (RAW - 46)) | (1L << (CONST - 46)) | (1L << (NOTE - 46)))) != 0)) {
						{
						setState(164);
						topLevelObject();
						}
					}

					}
					}
					setState(171);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(174);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageHeaderContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(SonoParser.PACKAGE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public SemiContext semi() {
			return getRuleContext(SemiContext.class,0);
		}
		public PackageHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).enterPackageHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).exitPackageHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SonoParserVisitor ) return ((SonoParserVisitor<? extends T>)visitor).visitPackageHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageHeaderContext packageHeader() throws RecognitionException {
		PackageHeaderContext _localctx = new PackageHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(PACKAGE);
			setState(177);
			identifier();
			setState(178);
			semi();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportListContext extends ParserRuleContext {
		public List<ImportHeaderContext> importHeader() {
			return getRuleContexts(ImportHeaderContext.class);
		}
		public ImportHeaderContext importHeader(int i) {
			return getRuleContext(ImportHeaderContext.class,i);
		}
		public ImportListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).enterImportList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).exitImportList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SonoParserVisitor ) return ((SonoParserVisitor<? extends T>)visitor).visitImportList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportListContext importList() throws RecognitionException {
		ImportListContext _localctx = new ImportListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(180);
				importHeader();
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportHeaderContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(SonoParser.IMPORT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public SemiContext semi() {
			return getRuleContext(SemiContext.class,0);
		}
		public TerminalNode DOT() { return getToken(SonoParser.DOT, 0); }
		public TerminalNode MULT() { return getToken(SonoParser.MULT, 0); }
		public ImportHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).enterImportHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).exitImportHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SonoParserVisitor ) return ((SonoParserVisitor<? extends T>)visitor).visitImportHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportHeaderContext importHeader() throws RecognitionException {
		ImportHeaderContext _localctx = new ImportHeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(IMPORT);
			setState(187);
			identifier();
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(188);
				match(DOT);
				setState(189);
				match(MULT);
				}
			}

			setState(192);
			semi();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelObjectContext extends ParserRuleContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public PropertyDeclarationContext propertyDeclaration() {
			return getRuleContext(PropertyDeclarationContext.class,0);
		}
		public LetDeclarationContext letDeclaration() {
			return getRuleContext(LetDeclarationContext.class,0);
		}
		public StructDeclarationContext structDeclaration() {
			return getRuleContext(StructDeclarationContext.class,0);
		}
		public ScriptDeclarationContext scriptDeclaration() {
			return getRuleContext(ScriptDeclarationContext.class,0);
		}
		public ArchetypeDeclarationContext archetypeDeclaration() {
			return getRuleContext(ArchetypeDeclarationContext.class,0);
		}
		public TopLevelObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelObject; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).enterTopLevelObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).exitTopLevelObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SonoParserVisitor ) return ((SonoParserVisitor<? extends T>)visitor).visitTopLevelObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelObjectContext topLevelObject() throws RecognitionException {
		TopLevelObjectContext _localctx = new TopLevelObjectContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_topLevelObject);
		try {
			setState(200);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(194);
				functionDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(195);
				propertyDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(196);
				letDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(197);
				structDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(198);
				scriptDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(199);
				archetypeDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public ModifierListContext modifierList() {
			return getRuleContext(ModifierListContext.class,0);
		}
		public TerminalNode FUNC() { return getToken(SonoParser.FUNC, 0); }
		public SimpleIdentifierContext simpleIdentifier() {
			return getRuleContext(SimpleIdentifierContext.class,0);
		}
		public FunctionValueParametersContext functionValueParameters() {
			return getRuleContext(FunctionValueParametersContext.class,0);
		}
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public FunctionReceiverContext functionReceiver() {
			return getRuleContext(FunctionReceiverContext.class,0);
		}
		public TerminalNode DOT() { return getToken(SonoParser.DOT, 0); }
		public List<TerminalNode> NL() { return getTokens(SonoParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(SonoParser.NL, i);
		}
		public TerminalNode COLON() { return getToken(SonoParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SonoParserListener ) ((SonoParserListener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SonoParserVisitor ) return ((SonoParserVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
